# qsoc

./: .clang-tidy  .cppcheck-suppressions  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml
cmake/: AddSpdxHeaders.cmake  AddSpdxHeadersHelper.cmake  README.md
doc/: README.md  flake.nix
doc/en/: about.typ  command.typ  config.typ  datasheet.typ  format.typ  format_bus.typ  format_clock.typ  format_fsm.typ  format_logic.typ  format_netlist.typ  format_overview.typ  format_power.typ  format_reset.typ  format_template.typ  format_validation.typ  main.typ  overview.typ
resource/: resource.qrc
soc_demo/: h750.yaml  mp2_arch.md  mp2_arch.txt
src/: main.cpp
src/cli/: qsoccliparsebus.cpp  qsoccliparsegenerate.cpp  qsoccliparsemodule.cpp  qsoccliparsemodulebus.cpp  qsoccliparseproject.cpp  qsoccliworker.cpp  qsoccliworker.h
src/common/: config.h  qllmservice.cpp  qllmservice.h  qslangdriver.cpp  qslangdriver.h  qsocbusmanager.cpp  qsocbusmanager.h  qsocconfig.cpp  qsocconfig.h  qsocgeneratemanager.cpp  qsocgeneratemanager.h  qsocgeneratenetlist.cpp  qsocgenerateprimitiveclock.cpp  qsocgenerateprimitiveclock.h  qsocgenerateprimitivecomb.cpp  qsocgenerateprimitivecomb.h  qsocgenerateprimitivefsm.cpp  qsocgenerateprimitivefsm.h  qsocgenerateprimitivepower.cpp  qsocgenerateprimitivepower.h  qsocgenerateprimitivereset.cpp  qsocgenerateprimitivereset.h  qsocgenerateprimitiveseq.cpp  qsocgenerateprimitiveseq.h  qsocgeneratereportunconnected.cpp  qsocgeneratereportunconnected.h  qsocgeneratestub.cpp  qsocgeneratetemplate.cpp  qsocgenerateverilog.cpp  qsocmodulemanager.cpp  qsocmodulemanager.h  qsocmodulemanagerbus.cpp  qsocnumberinfo.cpp  qsocnumberinfo.h  qsocprojectmanager.cpp  qsocprojectmanager.h  qsocverilogutils.cpp  qsocverilogutils.h  qsocyamlutils.cpp  qsocyamlutils.h  (+14 more)
src/gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindowaction.cpp  mainwindowproject.cpp
src/gui/schematicwindow/: schematicwindow.cpp  schematicwindow.h  schematicwindowaction.cpp
src/gui/schematicwindow/modulelibrary/: modulemodel.cpp  modulemodel.h  moduleview.cpp  moduleview.h  modulewidget.cpp  modulewidget.h  socmoduleconnector.cpp  socmoduleconnector.h  socmoduleitem.cpp  socmoduleitem.h
test/: CMakeLists.txt  qsoc_test.h  test_qslangdriver.cpp  test_qsoccliparsebus.cpp  test_qsoccliparsegenerate.cpp  test_qsoccliparsegenerateclocklogic.cpp  test_qsoccliparsegeneratecomblogic.cpp  test_qsoccliparsegeneratefsmlogic.cpp  test_qsoccliparsegeneratemerge.cpp  test_qsoccliparsegeneratepowerlogic.cpp  test_qsoccliparsegeneratereportunconnected.cpp  test_qsoccliparsegenerateresetlogic.cpp  test_qsoccliparsegenerateseqlogic.cpp  test_qsoccliparsegeneratestub.cpp  test_qsoccliparsegeneratetemplate.cpp  test_qsoccliparsegeneratetemplatercsv.cpp  test_qsoccliparsegeneratetemplaterdl.cpp  test_qsoccliparsegeneratetemplateregex.cpp  test_qsoccliparsegeneratetoplevelport.cpp  test_qsoccliparsemodule.cpp  test_qsoccliparsemodulebus.cpp  test_qsoccliparseproject.cpp  test_qsoccliworker.cpp
ui/: mainwindow.ui  schematicwindow.ui
